# LTP-API-SDK-CPP

./: CMakeLists.txt  README.md  test
rapdix/client/: main.cpp  test.cpp
rapdix/constants/: RapidxAPIConstants.h
rapdix/model/request/: CancelAllOrdersRequest.h  CancelOrderRequest.h  ChangePositionModeRequest.h  ClosePositionRequest.h  ClosePositionsRequest.h  GetBrokerPositionTierRequest.h  GetClearingStatementRequest.h  GetCollectionRecordRequest.h  GetDiscountRateRequest.h  GetFeeRateRequest.h  GetFundingRateRequest.h  GetLeverageRequest.h  GetLoanTierRequest.h  GetMarginLeverageRequest.h  GetMarkPriceRequest.h  GetPositionTierRequest.h  GetSubFeeRateRequest.h  GetSymInfoRequest.h  GetUserInterestRequest.h  PlaceOrderRequest.h  QueryArchivedTransactionsRequest.h  QueryHistoryOrdersArchiveRequest.h  QueryHistoryOrdersRequest.h  QueryHistoryPositionRequest.h  QueryOpenOrdersRequest.h  QueryOrderRequest.h  QueryPortfolioAssetsRequest.h  QueryPortfolioFundsHistoryRequest.h  QueryPositionRequest.h  QueryStatementRequest.h  QueryTradingStatsRequest.h  QueryTransactionsPageableRequest.h  QueryTransactionsRequest.h  ReplaceOrderRequest.h  SetLeverageRequest.h  SetMarginLeverageRequest.h  SetSubPortfolioFeeRateRequest.h
rapdix/model/response/: CancelAllOrdersResponse.h  CancelOrderResponse.h  ChangePositionModeResponse.h  ClosePositionResponse.h  ClosePositionsResponse.h  GetBrokerPositionTierResponse.h  GetClearingStatementResponse.h  GetCollectionRecordResponse.h  GetDiscountRateResponse.h  GetFeeRateResponse.h  GetFundingRateResponse.h  GetLeverageResponse.h  GetLoanTierResponse.h  GetMarginLeverageResponse.h  GetMarkPriceResponse.h  GetPositionTierResponse.h  GetSubFeeRateResponse.h  GetSymInfoResponse.h  GetUserFeeRateResponse.h  GetUserInterestResponse.h  PlaceOrderResponse.h  QueryAccountResponse.h  QueryAllPortfolioAssetsResponse.h  QueryArchivedTransactionsResponse.h  QueryHistoryOrdersResponse.h  QueryHistoryPositionResponse.h  QueryOpenOrdersResponse.h  QueryOrderResponse.h  QueryPortfolioAssetsResponse.h  QueryPortfolioFundsHistoryResponse.h  QueryPositionResponse.h  QueryStatementResponse.h  QueryTradingStatsResponse.h  QueryTransactionsPageableResponse.h  QueryTransactionsResponse.h  ReplaceOrderResponse.h  SetLeverageResponse.h  SetMarginLeverageResponse.h  (+1 more)
rapdix/model/vo/: PageEntity.h
rapdix/util/: Config.h  HttpClient.h  HttpUtil.cpp  HttpUtil.h  SignatureUtil.cpp  SignatureUtil.h
rapdix/websocket/: WebSocketClient.cpp  WebSocketClient.h  WebSocketDemo.cpp
(+25 files in other folders)
